--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
       </table>
     </section>
     <h2 id="mx">MX only</h2>
+    <h3>Current</h3>
     <section class="table-wrapper">
       <table>
         <thead>
