--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       </table>
     </section>
     <p class="timestamp">Last updated: 13 August 2021.</p>
+    <h3>Screenshots</h3>
     <section class="gallery">
       <figure>
         <img src="./screenshots/2021-08-13_ai.png">
