Add "the creation" of .bar

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
     <p>
       In order to prevent local aliases from colliding with newly registered
       TLDs (think programmers using <b>foo.bar</b> as a test domain before the
-      gTLD <b>.bar</b>), ICANN published a resolution in 2014 requiring new TLDs
-      to include a few apex DNS records on their TLDs for at least 90
-      days.<a href="#ref4">[4]</a>
+      creation of the gTLD <b>.bar</b>), ICANN published a resolution in 2014
+      requiring new TLDs to include a few apex DNS records on their TLDs for at
+      least 90 days.<a href="#ref4">[4]</a>
     </p>
     <p>
       As such, as of August 2021, the following TLDs also contain apex records,
