Point out mirrors

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <td><a href="http://ai./">http://ai/</a></td>
             <td><a href="http://209.59.119.34/">209.59.119.34</a></td>
             <td>mail.offshore.ai</td>
-            <td>Alive on HTTP; 400 on HTTPS</td>
+            <td>Alive on HTTP (mirror of <a href="http://offshore.ai/">offshore.ai</a>);
+              400 on HTTPS</td>
           </tr>
           <tr class="no-content">
             <td>Bahrain</td>
@@ -79,7 +80,8 @@
             <td><a href="http://pn./">http://pn/</a></td>
             <td><a href="http://139.162.17.173/">139.162.17.173</a></td>
             <td>No</td>
-            <td>Configuration page on HTTP; 400 on HTTPS</td>
+            <td>Configuration page on HTTP (mirror of <a href="http://pitcairn.net.pn/">pitcairn.net.pn</a>);
+              400 on HTTPS</td>
           </tr>
           <tr class="no-content">
             <td>Tokelau (NZ)</td>
@@ -95,7 +97,7 @@
             <td><a href="https://uz./">https://uz/</a></td>
             <td><a href="https://91.212.89.8/">91.212.89.8</a></td>
             <td>No</td>
-            <td>Alive on HTTPS only; mirror of <a href="https://cctld.uz/">cctld.uz</a></td>
+            <td>Alive on HTTPS only (mirror of <a href="https://cctld.uz/">cctld.uz</a>)</td>
           </tr>
           <tr>
             <td>Vatican</td>
