Add special thanks, date and author

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="List of active and historical dotless domains!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://rsms.me" crossorigin>
-  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <header>
@@ -484,6 +484,19 @@
         </p>
       </li>
     </ol>
+    <h2>Special Thanks</h2>
+    <ul>
+      <li>
+        Thanks to <b>Jan Schaumann</b> for writing about quirks of TLDs (on their
+        blog, at <a href="https://www.netmeister.org/blog/tlds.html">netmeister.org/blog/tlds.html</a>,
+        and on Twitter at <a href="https://twitter.com/jschauma/status/1426003590997495812">twitter.com/i/status/1426003590997495812</a>),
+        which is what inspired the creation of this page in the first place!
+      </li>
+    </ul>
+    <p class="timestamp">
+      Made with ♥&#xFE0E;<!--&#xFE0E;[Ref] stackoverflow.com/a/38452396/4824627-->
+      by Matheus Avellar – August 2021
+    </p>
   </footer>
   <link rel="preload" as="style" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" media="print" onload="this.media='all'" href="https://rsms.me/inter/inter.css">
