--- a/index.html
+++ b/index.html
@@ -500,5 +500,10 @@
   </footer>
   <link rel="preload" as="style" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" media="print" onload="this.media='all'" href="https://rsms.me/inter/inter.css">
+  <!-- ######### -->
+  <figure id="logo">
+    <a href="/"></a>
+    <link rel="stylesheet" href="/small-logo.css">
+  </figure>
 </body>
 </html>
