--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Dotless Domains</title>
@@ -35,8 +35,14 @@
       <strong>contact@pa</strong>, for example. For completeness' sake, however,
       apex MX servers are listed below as well.
     </p>
-    <h2 id="aaaaa">A or AAAA</h2>
-    <h3>Current</h3>
+    <h2>
+      <a id="aaaaa" href="#aaaaa">#</a>
+      A or AAAA
+    </h2>
+    <h3>
+      <a id="aaaaa-current" href="#aaaaa-current">#</a>
+      Current
+    </h3>
     <section class="table-wrapper">
       <table>
         <thead>
@@ -46,6 +52,7 @@
           <th>IP<br>(A/AAAA)</th>
           <th>Email server<br>(MX)</th>
           <th>Status</th>
+          <th>First seen on</th>
         </thead>
         <tbody>
           <tr class="alive">
@@ -54,8 +61,9 @@
             <td><a href="http://ai./">http://ai/</a></td>
             <td><a href="http://209.59.119.34/">209.59.119.34</a></td>
             <td>mail.offshore.ai</td>
-            <td>Alive on HTTP (mirror of <a href="http://offshore.ai/">offshore.ai</a>);
+            <td>Alive on HTTP (<a href="http://offshore.ai/">offshore.ai</a> mirror);
               400 on HTTPS</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr class="no-content">
             <td>Bahrain</td>
@@ -65,6 +73,7 @@
               <a href="http://10.10.10.10/">10.10.10.10</a></td>
             <td>No</td>
             <td>400 on HTTP; timeout on HTTPS</td>
+            <td>August 2021</td>
           </tr>
           <tr class="no-content">
             <td>Cameroon</td>
@@ -73,6 +82,7 @@
             <td><a href="http://195.24.205.60/">195.24.205.60</a></td>
             <td>No</td>
             <td>Timeout on HTTP/S; SSH open and responsive</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr class="no-content">
             <td>Pitcairn Islands (UK)</td>
@@ -82,6 +92,7 @@
             <td>No</td>
             <td>Configuration page on HTTP (mirror of <a href="http://pitcairn.net.pn/">pitcairn.net.pn</a>);
               400 on HTTPS</td>
+            <td>August 2021</td>
           </tr>
           <tr class="no-content">
             <td>Tokelau (NZ)</td>
@@ -90,6 +101,7 @@
             <td><a href="http://217.119.57.22/">217.119.57.22</a></td>
             <td>No</td>
             <td>Open, but empty response on HTTPS</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr class="alive">
             <td>Uzbekistan</td>
@@ -98,6 +110,7 @@
             <td><a href="https://91.212.89.8/">91.212.89.8</a></td>
             <td>No</td>
             <td>Alive on HTTPS only (mirror of <a href="https://cctld.uz/">cctld.uz</a>)</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Vatican</td>
@@ -107,6 +120,7 @@
               <a href="[2a01:b8:0:1:212:77:0:110]">[2a01:b8:0:1:212:77:0:110]</a></td>
             <td>No</td>
             <td>No known open ports (aside from DNS)</td>
+            <td>August 2021</td>
           </tr>
           <tr>
             <td>Samoa</td>
@@ -115,12 +129,16 @@
             <td><a href="http://64.70.19.33/">64.70.19.33</a></td>
             <td>mail.worldsite.ws</td>
             <td>Timeout</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
         </tbody>
       </table>
     </section>
-    <p class="timestamp">Last updated: 14 August 2021.</p>
-    <h3>Screenshots</h3>
+    <p class="timestamp">Last checked: 3 January 2022.</p>
+    <h3>
+      <a id="aaaaa-screenshots" href="#aaaaa-screenshots">#</a>
+      Screenshots
+    </h3>
     <section class="gallery">
       <figure>
         <img src="./screenshots/2021-08-13_ai.png">
@@ -159,7 +177,10 @@
         </figcaption>
       </figure>
     </section>
-    <h3>New TLDs</h3>
+    <h3>
+      <a id="aaaaa-new" href="#aaaaa-new">#</a>
+      New TLDs
+    </h3>
     <p>
       In order to prevent local aliases from colliding with newly registered
       TLDs (think programmers using <b>foo.bar</b> as a test domain before the
@@ -168,7 +189,7 @@
       least 90 days.<a href="#ref4">[4]</a>
     </p>
     <p>
-      As such, as of August 2021, the following TLDs also contain apex records,
+      As such, as of January 2022, the following TLDs also contain apex records,
       but they're merely informational and don't point to real servers:
     </p>
     <section class="table-wrapper">
@@ -192,21 +213,24 @@
             <td>your-dns-needs-immediate-attention.cpa</td>
           </tr>
           <tr>
-            <td>.politie</td>
-            <td>your-dns-needs-immediate-attention.politie</td>
+            <td>.music</td>
+            <td>your-dns-needs-immediate-attention.music</td>
           </tr>
           <tr>
-            <td>.watches</td>
-            <td>your-dns-needs-immediate-attention.watches</td>
+            <td>.politie</td>
+            <td>your-dns-needs-immediate-attention.politie</td>
           </tr>
         </tbody>
       </table>
     </section>
-    <p class="timestamp">Last updated: 14 August 2021.</p>
-    <h3>Historical</h3>
+    <p class="timestamp">Last checked: 3 January 2021.</p>
+    <h3>
+      <a id="aaaaa-historical" href="#aaaaa-historical">#</a>
+      Historical
+    </h3>
     <p>
       These are TLDs that previously had apex records, but no longer do so. The
-      bulk of it comes from a list by the IETF from 2013:<a href="#ref5">[5]</a>
+      bulk of it comes from a list by the IETF from 2013:
     </p>
     <section class="table-wrapper">
       <table>
@@ -216,7 +240,7 @@
           <th>URL</th>
           <th>IP<br>(A/AAAA)</th>
           <th>Email server<br>(MX)</th>
-          <th>Last known working year</th>
+          <th>Last known<br>working date</th>
         </thead>
         <tbody class="td-last-center">
           <tr>
@@ -303,25 +327,34 @@
         </tbody>
       </table>
     </section>
-    <h2 id="mx">MX only</h2>
-    <h3>Current</h3>
+    <h2>
+      <a id="mx" href="#mx">#</a>
+      MX only
+    </h2>
+    <h3>
+      <a id="mx-current" href="#mx-current">#</a>
+      Current
+    </h3>
     <section class="table-wrapper">
       <table>
         <thead>
           <th>Territory</th>
           <th>ccTLD</th>
           <th>Email server<br>(MX)</th>
+          <th>First seen on</th>
         </thead>
         <tbody>
           <tr>
             <td>Central African Republic</td>
             <td>.cf</td>
             <td>mail.intnet.cf</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Guadeloupe (FR)</td>
             <td>.gp</td>
             <td>ns1.nic.gp</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Guatemala</td>
@@ -333,37 +366,50 @@
               alt1.aspmx.l.google.com<br>
               alt2.aspmx.l.google.com<br>
               </td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Croatia</td>
             <td>.hr</td>
             <td>alpha.carnet.hr</td>
+            <td>2013<a href="#ref5">[5]</a></td>
+          </tr>
+          <tr>
+            <td>Cambodia</td>
+            <td>.kh</td>
+            <td>ns1.dns.net.KH</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Comoros</td>
             <td>.km</td>
             <td>mail1.comorestelecom.km</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Sri Lanka</td>
             <td>.lk</td>
             <td>malithi-slt.nic.lk<br>
               malithi-lc.nic.lk</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Martinique (FR)</td>
             <td>.mq</td>
             <td>mx1-mq.mediaserv.net</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Mauritania</td>
             <td>.mr</td>
             <td>mail.nic.mr</td>
+            <td>August 2021</td>
           </tr>
           <tr>
             <td>Panama</td>
             <td>.pa</td>
             <td>ns.pa</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Philippines</td>
@@ -373,31 +419,38 @@
               mx3.sendnow.ph<br>
               mx4.sendnow.ph<br>
               mx5.sendnow.ph</td>
+            <td>August 2021</td>
           </tr>
           <tr>
             <td>Suriname</td>
             <td>.sr</td>
             <td>spsbbank.sr</td>
+            <td>August 2021</td>
           </tr>
           <tr>
             <td>Trinidad and Tobago</td>
             <td>.tt</td>
             <td>aspmx.l.google.com<br>
               alt1.aspmx.l.google.com</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
           <tr>
             <td>Ukraine</td>
             <td>.ua</td>
             <td>mr.kolo.net</td>
+            <td>2013<a href="#ref5">[5]</a></td>
           </tr>
         </tbody>
       </table>
     </section>
-    <p class="timestamp">Last updated: 14 August 2021.</p>
-    <h3>Historical</h3>
+    <p class="timestamp">Last checked: 3 January 2022.</p>
+    <h3>
+      <a id="mx-historical" href="#mx-historical">#</a>
+      Historical
+    </h3>
     <p>
       Similarly to the historical A/AAAA records, these are TLDs that previously
-      had apex MX records, but no longer do so:<a href="#ref5">[5]</a>
+      (only) had apex MX records, but no longer do so:
     </p>
     <section class="table-wrapper">
       <table>
@@ -405,7 +458,7 @@
           <th>Territory</th>
           <th>ccTLD</th>
           <th>Email server<br>(MX)</th>
-          <th>Last known working year</th>
+          <th>Last known<br>working date</th>
         </thead>
         <tbody class="td-last-center">
           <tr>
@@ -439,7 +492,10 @@
     </section>
   </main>
   <footer>
-    <h2>References</h2>
+    <h2>
+      <a id="references" href="#references">#</a>
+      References
+    </h2>
     <ol>
       <li id="ref1">
         <p>
@@ -484,7 +540,10 @@
         </p>
       </li>
     </ol>
-    <h2>Special Thanks</h2>
+    <h2>
+      <a id="special-thanks" href="#special-thanks">#</a>
+      Special Thanks
+    </h2>
     <ul>
       <li>
         Thanks to <b>Jan Schaumann</b> for writing about quirks of TLDs (on their
@@ -495,11 +554,12 @@
     </ul>
     <p class="timestamp">
       Made with ♥&#xFE0E;<!--&#xFE0E;[Ref] stackoverflow.com/a/38452396/4824627-->
-      by Matheus Avellar – August 2021
+      by Matheus Avellar<br>Last updated on January 2022
     </p>
   </footer>
   <link rel="preload" as="style" href="https://rsms.me/inter/inter.css">
   <link rel="stylesheet" media="print" onload="this.media='all'" href="https://rsms.me/inter/inter.css">
+  <noscript><link rel="stylesheet" href="https://rsms.me/inter/inter.css"></noscript>
   <!-- ######### -->
   <figure id="logo">
     <a href="/"></a>
