Add table of contents

--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
       <strong>contact@pa</strong>, for example. For completeness' sake, however,
       apex MX servers are listed below as well.
     </p>
+    <p><b>Table of Contents:</b></p>
+    <ol id="toc">
+      <li>
+        <a href="#aaaaa">A or AAAA</a>
+        <ol>
+          <li><a href="#aaaaa-current">Current</a></li>
+          <li><a href="#aaaaa-screenshots">Screenshots</a></li>
+          <li><a href="#aaaaa-new">New TLDs</a></li>
+          <li><a href="#aaaaa-historical">Historical</a></li>
+        </ol>
+      </li>
+      <li>
+        <a href="#mx">MX only</a>
+        <ol>
+          <li><a href="#mx-current">Current</a></li>
+          <li><a href="#mx-historical">Historical</a></li>
+        </ol>
+      </li>
+      <li><a href="#references">References</a></li>
+      <li><a href="#special-thanks">Special Thanks</a></li>
+    </ol>
+    <hr>
     <h2>
       <a id="aaaaa" href="#aaaaa">#</a>
       A or AAAA
@@ -327,6 +349,7 @@
         </tbody>
       </table>
     </section>
+    <hr>
     <h2>
       <a id="mx" href="#mx">#</a>
       MX only
@@ -490,6 +513,7 @@
         </tbody>
       </table>
     </section>
+    <hr>
   </main>
   <footer>
     <h2>
