Fix Vatican href woops

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <td>.va</td>
             <td><a href="http://va./">http://va/</a></td>
             <td><a href="http://[2a01:b8:0:1:212:77:0:2]/">[2a01:b8:0:1:212:77:0:2]</a><br>
-              <a href="[2a01:b8:0:1:212:77:0:110]">[2a01:b8:0:1:212:77:0:110]</a></td>
+              <a href="http://[2a01:b8:0:1:212:77:0:110]/">[2a01:b8:0:1:212:77:0:110]</a></td>
             <td>No</td>
             <td>No known open ports (aside from DNS)</td>
             <td>August 2021</td>
