October update: http://ai/ has changed

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <td>
               <dl>
                 <dt>HTTP</dt>
-                <dd>Alive (<a href="http://offshore.ai/">offshore.ai</a> mirror)</dd>
+                <dd>Alive (information page)</dd>
                 <dt>HTTPS</dt>
                 <dd>Connection refused</dd>
               </dl>
@@ -200,16 +200,22 @@
         </tbody>
       </table>
     </section>
-    <p class="timestamp">Last checked: 3 Aug. 2022.</p>
+    <p class="timestamp">Last checked: 23 Oct. 2022.</p>
     <h4>
       <a id="aaaaa-screenshots" href="#aaaaa-screenshots">#</a>
       Screenshots
     </h4>
     <section class="gallery">
       <figure>
+        <img src="./screenshots/2022-10-23_ai.png">
+        <figcaption>
+          <b>http://ai/</b> as of 23 Oct. 2022.
+        </figcaption>
+      </figure>
+      <figure>
         <img src="./screenshots/2021-08-13_ai.png">
         <figcaption>
-          <b>http://ai/</b> as of 13 Aug. 2021.
+          <b>http://ai/</b> on 13 Aug. 2021<br>(mirror of <a href="http://offshore.ai">offshore.ai</a>).
         </figcaption>
       </figure>
       <figure>
@@ -263,27 +269,23 @@
         <tbody>
           <tr>
             <td>.arab</td>
-            <td rowspan="4"><a href="http://127.0.53.53/">127.0.53.53</a></td>
+            <td rowspan="3"><a href="http://127.0.53.53/">127.0.53.53</a></td>
             <td>your-dns-needs-immediate-attention.arab</td>
-            <td rowspan="4">"Your DNS configuration needs immediate attention see
+            <td rowspan="3">"Your DNS configuration needs immediate attention see
               <a href="https://icann.org/namecollision">https://icann.org/namecollision</a>"</td>
           </tr>
           <tr>
-            <td>.cpa</td>
-            <td>your-dns-needs-immediate-attention.cpa</td>
+            <td>.kids</td>
+            <td>your-dns-needs-immediate-attention.kids</td>
           </tr>
           <tr>
             <td>.music</td>
             <td>your-dns-needs-immediate-attention.music</td>
           </tr>
-          <tr>
-            <td>.politie</td>
-            <td>your-dns-needs-immediate-attention.politie</td>
-          </tr>
         </tbody>
       </table>
     </section>
-    <p class="timestamp">Last checked: 3 Jan. 2022.</p>
+    <p class="timestamp">Last checked: 23 Oct. 2022.</p>
     <h3>
       <a id="aaaaa-historical" href="#aaaaa-historical">#</a>
       Historical
@@ -525,7 +527,7 @@
         </tbody>
       </table>
     </section>
-    <p class="timestamp">Last checked: 3 Aug. 2022.</p>
+    <p class="timestamp">Last checked: 23 Oct. 2022.</p>
     <h3>
       <a id="mx-historical" href="#mx-historical">#</a>
       Historical
